--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -6,7 +6,13 @@
             <script src="TicTacToe.js"></script>
         </head>
         <body>
-            <h1 id="test">aaaaa</h1>
-            <button type="button" onclick="testing()">Try it</button>
+            <div class="titleBox">
+                <h1>Tic Tac Toe</h1>
+            </div>
+            <div class="game">
+                
+                <div class="gameboard">
+                </div>
+            </div>
         </body>
     </html>
