add resetbtn, project completed

--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -11,6 +11,7 @@
             <div class="game">
                 <div class="turn"></div>
                 <div class="gameboard"></div>
+                <div class="reset"></div>
             </div>
 
             <script src="TicTacToe.js"></script>
